@@ -51,14 +51,14 @@
         // window.new_name_here('trackPageView', 'Async Test'); // Track the page view with custom title
         window.new_name_here('trackPageView', null , [ // Auto-set page title; add page context
           {
-            schema: "com.example_company/page/1.2.1",
+            schema: "com.example_company/page/json/1-2-1",
             data: {
               pageType: 'test',
               lastUpdated: new Date(2014,1,26)
             }
           },
           {
-            schema: "com.example_company/user/2.0.0",
+            schema: "com.example_company/user/json/2-0-0",
             data: {
               userType: 'tester',
             }
@@ -87,8 +87,9 @@
             alert("Viewing a product");
 
             // Only the "uri" tracker will track the Viewed Product event
-            window.new_name_here('com.acme_company', 'trackUnstructEvent:uri', 'Viewed Product',
-                {
+            window.new_name_here('trackUnstructEvent:uri', {
+                schema: 'com.acme_company/viewed_product/json/5.0.0',
+                data: {
                     productId: 'ASO01043',
                     category: 'Dresses',
                     brand: 'ACME',
@@ -96,7 +97,8 @@
                     price: 49.95,
                     sizes: ['xs', 's', 'l', 'xl', 'xxl'],
                     availableSince: new Date(2013,3,7)
-                });
+              }
+            });
         }
 
         function addEcommerceTransaction() {
@@ -130,7 +132,7 @@
               '2',                    // quantity - required
               'JPY',                  // currency
               [{                      // context
-                schema: "com.example_company/products/1.0.0",
+                schema: "com.example_company/products/json/1-0-0",
                 data: {
                   "launchDate": new Date(2013,3,7)
                 }
