@@ -35,7 +35,9 @@ Added pageUnloadTimer option to argmap (#171)
 Added event vendor as argument to trackUnstructEvent (#157)
 Added custom context vendor configuration option (#180)
 Removed type hints from unstructured events and custom contexts (#163)
-Added hardcoded header to custom context arrays (#199)
+Added hardcoded schema to custom context arrays (#199)
+Added hardcoded schema to unstructured events (#196)
+Changed trackUnstructEvent to take a JSON containing schema and data fields (#197)
 
 Version 1.0.1 (2014-04-09)
 --------------------------
